# external-editor-revived

./: .clog.toml  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  gh-ph.yml  messaging-host.yml  release.yml  repo-sync.yml
extension/: .jsbeautifyrc  background.js  manifest.json  package.json  tsfmt.json
extension/compose_action/: compose_action.html  compose_action.js
extension/options/: options.html  options.js
src/: main.rs  model.rs  transport.rs  util.rs
src/model/: app_manifest.rs  messaging.rs  thunderbird.rs
src/util/: meta_header.rs
