[package]
name = "external-editor-revived"
description = "Edit emails in external editors such as Vim, Neovim, Emacs, etc."
version = "1.2.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = { version = "0.27.2", features = ["derive"] }
webextension-native-messaging = "1.0.1"

[dev-dependencies]
base64 = "0.22.1"
mockall = "0.13.0"
regex = "1.10.2"
